[package]
name = "hacker-news-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
serde = { version = "1.0.145", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hacker-news-api = {path="../api"}
